--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "project2",
+  "name": "project3",
   "version": "1.0.0",
-  "description": "cs142 project2 - JavaScript Calisthenics",
-  "main": "cs142-test-project2.js",
+  "description": "cs142 project3 - JavaScript and the DOM",
   "dependencies": {
-    "jshint": "^2.9.4"
+    "jshint": "^2.9.1-rc2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node run-tests-using-node.js",
+    "test":  "echo Test your code by opening datapicker.html and cs142-test-table.html in your browser.",
     "jshint": "./node_modules/.bin/jshint --config .jshintrc --exclude=node_modules . || exit 0"
   },
   "author": "Mendel Rosenblum <mendel@cs.stanford.edu> (http://www.stanford.edu/~mendel)",
