--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "node_modules/.bin/webpack -d",
     "build:w": "node_modules/.bin/webpack -d --watch",
-    "lint": "node_modules/.bin/eslint *.jsx components/*/*.jsx lib/*.js"
+    "lint": "node_modules/.bin/eslint *.jsx components/*/*.jsx lib/*.js",
+    "start": "node webServer.js & npm run build:w"
   },
   "author": "Mendel Rosenblum <mendel@cs.stanford.edu> ",
   "license": "ISC",
